syntax = "proto3";

package catalog_service;
option go_package = "genproto/catalog_service";
import "category.proto";

service ProductService {
    rpc Create(CreateProductRequest) returns (Response) {}
    rpc Get(IdRequest) returns (Product) {}
    rpc List(ListProductRequest) returns (ListProductResponse) {}
    rpc Update(UpdateProductRequest) returns (Response) {}
    rpc Delete(IdRequest) returns (Response) {}
}

message CreateProductRequest {
    string title = 1;
    string description = 2;
    string photo = 3;
    string order_number = 4;
    bool active = 5;
    string product_type = 6;
    double price = 7;
    int32 category_id = 8;
}

message Product {
    string id = 1;
    string title = 2;
    string description = 3;
    string photo = 4;
    string order_number = 5;
    bool active = 6;
    string product_type = 7;
    double price = 8;
    int32 category_id = 9;
    string created_at = 10;
    string updated_at = 11;
}

message UpdateProductRequest {
    string id = 1;
    string title = 2;
    string description = 3;
    string photo = 4;
    string order_number = 5;
    bool active = 6;
    string product_type = 7;
    double price = 8;
    int32 category_id = 9;
}

message ListProductRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
    string type = 4;
    int32 category = 5;
    bool status = 6;
}

message ListProductResponse {
     repeated Product Products = 1;
     int32 count = 2;
}
